feat: enhance K8s Operator and deployment manifests — L9
- Add PVC, Service, health probes, env vars, resource limits to Reconciler
- Add status conditions (PVCReady, DeploymentReady, ServiceReady, Ready)
- Add 3 new tests for Service, PVC creation, and conditions verification
- Update Dockerfile: add start-period to HEALTHCHECK, keep uber-jar approach
- Add flat k8s manifests at infra/k8s/ (namespace, deployment, service, HPA, kustomization)
- Append Quick Start with minikube section to docs/L9_Deployment.md
- Operator tests: 18/18 pass